fix: overflow image causing horizontal scroll after having added an image

--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 }
 
 body {
+  //overflow: hidden;
   margin: 0;
   height: 100vh;
   font-family: var(--bred-font);
@@ -172,6 +173,8 @@ button {
 }
 
 .bred-skills {
+  overflow: hidden;
+
   .bred-atomium-img {
     position: relative;
     top: -8rem;
